--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Go
@@ -18,5 +17,9 @@ jobs:
         go-version: '1.21'
     - name: Install dependencies
       run: go mod tidy
-    - name: Run tests
+    - name: Run Go tests
       run: go test ./...
+    - name: Run Postman Collection
+      run: |
+        npm install -g newman
+        newman run /Users/mohamadjavad/Desktop/testcollction-devops.postman_collection.json
